--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,8 +4,7 @@
     "paths": {
       "@/components/*": ["components/*"],
       "@/lib/*": ["lib/*"],
-      "@/styles/*": ["styles/*"],
-      "@/utils/*": ["utils/*"]
+      "@/styles/*": ["styles/*"]
     }
   }
 }
