--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "date-fns": "^2.23.0",
     "firebase": "^8.9.1",
+    "firebase-admin": "^9.11.1",
     "framer-motion": "^4",
     "next": "11.1.0",
     "react": "17.0.2",
