--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "framer-motion": "^4",
     "js-cookie": "^3.0.0",
     "next": "11.1.0",
+    "pino": "^6.13.2",
+    "pino-logflare": "^0.3.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.2",
