--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.15",
-    "@chakra-ui/react": "^1.6.6",
+    "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "date-fns": "^2.23.0",
@@ -19,6 +19,7 @@
     "framer-motion": "^4",
     "js-cookie": "^3.0.0",
     "next": "11.1.0",
+    "next-seo": "^4.28.1",
     "pino": "^6.13.2",
     "pino-logflare": "^0.3.12",
     "react": "17.0.2",
