--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "date-fns": "^2.23.0",
+    "firebase": "^8.9.1",
+    "firebase-admin": "^9.11.1",
+    "framer-motion": "^4",
+    "js-cookie": "^3.0.0",
     "next": "11.1.0",
+    "next-seo": "^4.28.1",
+    "pino": "^6.13.2",
+    "pino-logflare": "^0.3.12",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.12.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "prettier": "2.3.2"
   }
 }
