--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^11.1.2",
     "date-fns": "^2.23.0",
     "firebase": "^8.9.1",
     "firebase-admin": "^9.11.1",
     "framer-motion": "^4",
+    "iframe-resizer": "^4.3.2",
     "js-cookie": "^3.0.0",
     "next": "11.1.0",
     "next-seo": "^4.28.1",
